--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "inflection": "^1.12.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.1"
