--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "http-assert": "^1.4.1",
     "http-errors": "~1.6.3",
     "inflection": "^1.12.0",
     "jsonwebtoken": "^8.5.1",
