--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "node-dev ./bin/www"
+    "dev": "node-dev ./bin/www",
+    "serve": "nodemon ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
